@@ -1,0 +1,9 @@
+li.product a img.yoStar, .woocommerce-page ul.products li.product a img.yoStar {
+  display: inline-block;
+  width: 14px;
+  height: auto;
+  margin: 0;
+  box-shadow: 0 0px 0px 0 rgba(0,0,0,0.3);
+  -webkit-box-shadow: 0 0px 0px 0 rgba(0,0,0,0.3);
+  -moz-box-shadow: 0 0px 0px 0 rgba(0,0,0,0.3);
+}
