@@ -1,6 +1,6 @@
 #toplevel_page_yotpo-settings-page div.wp-menu-image
 {
-	background-image:url('images/logo_small.png');
+	background-image:url('../images/logo_small.png');
 	background-size:auto;
 	padding: 0 0 0 0;
 }
