@@ -1,5 +1,5 @@
 #icon-yotpo-settings-page {
-    background: transparent url( 'images/logo.png' ) no-repeat;
+    background: transparent url( '../images/logo.png' ) no-repeat;
 }
 
 .form-table th {
