@@ -9,3 +9,8 @@ Alon
 1) Changes in admin design
 2) Bug fix in past purchases.
 3) Add conversion tracking code to thank you page.
+
+2013-06-25
+----
+Alon
+1) Re arrange code, small bug fixes, add some css.
